--- a/src/pages/energjia/energjia.scss
+++ b/src/pages/energjia/energjia.scss
@@ -1,2 +1,29 @@
 .slider-details.h4 {color: white}
 .card-content{background: white}
+//swipper
+.slide-image-post img{
+    height: 200px;
+    width: 100%;
+  }
+  .slider-details h4{
+    font-size: 10px;
+    color: white;
+    font-family: Montserrat-Bold;
+  }
+  .swiper-wrapper{
+    position: relative;
+    margin: 0px;
+    width: 100%;
+    font-size: 1.4rem;
+    background: #fff;
+   
+  }
+  .slider-details{
+    position: absolute;
+    bottom: 10%;
+    width: 70%;
+    background: rgba(0, 0, 0, .5);
+  }
+  .tab-buttons{height: 36px;}
+ 
+  //
